--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
         <source src="computer-startup-sound-effect-312870.mp3" type="audio/mpeg">
     </audio>
     <audio id="squeakyToySound">
-        <source src="/SqueakyToy.opus" type="audio/ogg">
+        <source src="SqueakyToy.opus" type="audio/ogg">
     </audio>
     <audio id="explosionSound">
-        <source src="/Roblox Explosion Sound Effect.mp3" type="audio/mpeg">
+        <source src="Roblox Explosion Sound Effect.mp3" type="audio/mpeg">
     </audio>
 
     <script src="database-manager.js"></script>
