--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head w-tid="3">
     
 <!-- This retarded shit is the GitHub Pages version - OMG COME HERE LET ME KISS U MWAAAH -->
-<!-- Welcome to the beautiful HTML chaos -->
     <title>OC Document Terminal</title>
 <meta property="og:title" content="OC Document Terminal"/>
-<meta property="og:url" content="https://24pj12mph026xb200loc.c.websim.com?v=168"/>
+<meta property="og:url" content="https://24pj12mph026xb200loc.c.websim.com?v=169"/>
 <meta property="og:type" content="website"/>
 <meta property="twitter:card" content="summary_large_image"/>
-<meta property="og:image" content="https://images.websim.com/v1/project/24pj12mph026xb200loc/revision/168/1200.jpeg"/>
-<meta property="twitter:image" content="https://images.websim.com/v1/project/24pj12mph026xb200loc/revision/168/1200.jpeg"/>
+<meta property="og:image" content="https://images.websim.com/v1/project/24pj12mph026xb200loc/revision/169/1200.jpeg"/>
+<meta property="twitter:image" content="https://images.websim.com/v1/project/24pj12mph026xb200loc/revision/169/1200.jpeg"/>
 <link  rel="canonical" href="https://websim.com/@Alexander/oc-document-terminal">
 <link rel="stylesheet" href="https://api.websim.com/fonts.css?v=46e8df4aaf02ef9c267a7866101fb93ff40f4e51">
 <link rel="stylesheet" href="https://api.websim.com/ctxmenu.css?v=46e8df4aaf02ef9c267a7866101fb93ff40f4e51">
-<script class="websim-injected">__WEBSIM_DATA__={"home":false,"hostOrigin":"https://websim.com","apiOrigin":"https://api.websim.com","isTopLevelFrame":false,"project_id":"24pj12mph026xb200loc","project_version":168,"route":{"type":"slug","username":"Alexander","slug":"oc-document-terminal"},"baseUrl":"https://websim.com/@Alexander/oc-document-terminal"}</script>
+<script class="websim-injected">__WEBSIM_DATA__={"home":false,"hostOrigin":"https://websim.com","apiOrigin":"https://api.websim.com","isTopLevelFrame":false,"project_id":"24pj12mph026xb200loc","project_version":169,"route":{"type":"slug","username":"Alexander","slug":"oc-document-terminal"},"baseUrl":"https://websim.com/@Alexander/oc-document-terminal"}</script>
 <script class="websim-injected" src="https://api.websim.com/dist/index.js?v=46e8df4aaf02ef9c267a7866101fb93ff40f4e51"></script>
 <meta charset="UTF-8" w-tid="5"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" w-tid="7"/>
@@ -43,7 +42,7 @@
                         <button class="nav-button" id="addImageButton" w-tid="41">ADD IMAGE</button>
                         <button class="nav-button" id="viewMainButton" w-tid="43">VIEW MAIN PAGE</button>
                         <button class="save-button" id="saveButton" w-tid="45">SAVE DATA</button>
-                        <!-- Download button removed for GitHub Pages deployment - OMG COME HERE LET ME KISS U MWAAAH -->
+                        <!-- Download button removed for GitHub Pages deployment -->
                         <div class="status-indicator" id="statusIndicator" w-tid="49">Ready</div>
                         <div class="timestamp" id="timestamp" w-tid="51"></div>
                     </div>
@@ -313,7 +312,5 @@
     <script src="boot-sequence.js" w-tid="367"></script>
     <script src="oc-document.js" w-tid="369"></script>
     <script src="main.js" w-tid="371"></script>
-<!-- End of this gorgeous HTML fuckery -->
-<!-- OMG COME HERE LET ME KISS U MWAAAH - markup complete -->
 </body>
 </html>
